<resources>
    <string name="app_name">Splitwise</string>
    <string name="tab_text_1">Friends</string>
    <string name="tab_text_2">Groups</string>
    <string name="tab_text_3">Activity</string>
    <string name="textview">TextView</string>
    <string name="group_name">Group Name</string>
    <string name="enter_group_name">Enter Group Name here</string>
    <string name="add_people_group">Add people to group</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_friend">Add Friend</string>
    <string name="add_group">Create New Group</string>
    <string name="settings">Settings</string>
    <string name="UserCollection"> Users</string>
    <string name="FriendsCollection">FriendList</string>
    <string name="user_groups">GroupList</string>
    <string name="GroupsCollection">Groups</string>
    <string name="GroupUsers">Group Users</string>
    <string name="borrowersCollection">Borrowers</string>
    <string name="groupTransactionCollection">Group Transactions</string>
    <string name="nonGroupTransactionCollection">Non Group Transactions</string>
    <string name="TransactionItems">Transaction Items</string>
    <string name="AllExchanges">All exchanges</string>
    <string name="userSpecificExchanges">Amounts owed</string>
    <string name="write_friend">Enter user ID here</string>
    <string name="save_button">Save</string>
    <string name="finish_button">Finish</string>
    <string name="key_name_group">group_name</string>
    <string name="key_friends">friends_list</string>
    <string name="key_users_selection">selected_users</string>
    <string name="Next">next</string>
    <string name="hint_desc">Enter Description here</string>
    <string name="enter_amount">Enter Amount here</string>
    <string name="users_transac">Add users to transaction</string>
    <string-array name="tag_choices">
        <item>General</item>
        <item>Food</item>
        <item>Transport</item>
        <item>Utilities</item>
        <item>Home</item>
    </string-array>
    <string name="key_transac_amt">amount</string>
    <string name="key_transac_desc">description</string>
    <string name="key_transac_user_list">user_list</string>
    <string name="key_transac_tag">transaction_tag</string>
    <string name="equal_split">Split Equally</string>
    <string name="amount_string">0.00</string>
    <string name="settle_button">Settle Up</string>
    <string name="balances">Balances</string>
    <string name="leave_group">Leave Group</string>
    <string name="key_tag">Tag</string>
    <string name="key_group_id">group_id</string>
    <string name="key_group_name">group_name</string>
    <string name="key_group_amount">group_amount</string>
    <string name="owed_amount">Amount Owed</string>
    <string name="Activities">Activities</string>
    <string name="key_groupId">groupId</string>
    <string name="key_user_settle">settle_users</string>
    <string name="key_user_balances">balances_users</string>
    <string name="friend_name">Friend name</string>
    <string name="amount_owed_friend">Amount owed</string>
    <string name="enter_password">Enter Current Password</string>
    <string name="enter_new_password">Enter New Password</string>
</resources>
