<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".transaction.AddTransaction">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/tag_spinner"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp" />

            <EditText
                android:id="@+id/enter_amount"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:hint="@string/enter_amount"
                android:inputType="numberDecimal"
                tools:ignore="Autofill" />

        </LinearLayout>

        <EditText
            android:id="@+id/tran_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_desc"
            android:inputType="text"
            android:layout_margin="16dp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/add_users_transac"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:textSize="17sp"
            android:layout_margin="16dp"
            android:clickable="true"
            android:text="@string/users_transac"
            tools:ignore="KeyboardInaccessibleWidget" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/users_transac_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>