<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".add_friend_or_group.CreateGroup">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_group"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:src="@mipmap/ic_launcher"
            tools:ignore="KeyboardInaccessibleWidget" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/image_group"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_name"
                android:textSize="12sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/group_name_edit"
                android:hint="@string/enter_group_name"
                android:inputType="text"
                tools:ignore="Autofill" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/add_people_group"
        android:id="@+id/add_people_group"
        android:gravity="center"
        android:textSize="17sp"
        android:clickable="true"
        tools:ignore="KeyboardInaccessibleWidget" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/users_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>